--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,25 @@
+### Theme
 STORAGE_THEME_KEY=
+
+### Session
+SESSION_KEY=
+
+### Firebase
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGE_SENDER_ID=
+FIREBASE_APP_ID=
+
+FIREBASE_SDK_TYPE=
+FIREBASE_SDK_PROJECT_ID=
+FIREBASE_SDK_PRIVATE_KEY_ID=
+FIREBASE_SDK_PRIVATE_KEY=
+FIREBASE_SDK_CLIENT_ID=
+FIREBASE_SDK_CLIENT_EMAIL=
+FIREBASE_SDK_AUTH_URI=
+FIREBASE_SDK_TOKEN_URI=
+FIREBASE_SDK_AUTH_PROVIDER=
+FIREBASE_SDK_CLIENT_CERT_URL=
+FIREBASE_SDK_UNIVERSAL_DOMAIN=
