--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
