--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ NEXT_PUBLIC_FIREBASE_SDK_TOKEN_URI=
 NEXT_PUBLIC_FIREBASE_SDK_AUTH_PROVIDER=
 NEXT_PUBLIC_FIREBASE_SDK_CLIENT_CERT_URL=
 NEXT_PUBLIC_FIREBASE_SDK_UNIVERSAL_DOMAIN=
+
+### Github
+NEXT_PUBLIC_GITHUB_TOKEN=
