--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "firebase-admin": "^12.0.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
+    "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
