--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "lucide-react": "^0.356.0",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "octokit": "^3.1.2",
